@@ -1,7 +1,9 @@
 AUX haddock-0.8-prefix.patch 660 RMD160 bf29836f103f82ca4a07493339551fab2d443472 SHA1 d7f1f285fd7b9b06c4a7bcaf3e6800e8944cfe63 SHA256 2332886c1722a7edd7d06e0100b178f35ff0b2e900c7e40325caabdf289f6916
 DIST haddock-0.8-src.tar.gz 162872 RMD160 80b7a582ea91fb36b97675d7ea8a027221a28b8e SHA1 e171d4446ac6fcef526cad4c688892fe587fe90e SHA256 d54078dd9dc75aa589cb05fbe1136c1fb41d4a346e30b71de948425ea7c05a55
 DIST haddock-0.9.tar.gz 163380 RMD160 27685313184e70270d7e4f043c7d671b84acfb23 SHA1 f3c5299b657b170e7a44b66ebd60d3e0947a35aa SHA256 beefd4a6da577978e7a79cabba60970accc5cd48fbb04c424a6b36ace3a9f8d0
+DIST haddock-2.4.2.tar.gz 103033 RMD160 18317b3ffd60f2b0925d635ce1ea2ab35825860c SHA1 cd1de409029bcabdf79b05b4c00c7702c836c765 SHA256 dbf0a7d0103a3ce6a91b2a3b96148c1b9c13ea7f8bd74260c21fe98df7839547
 EBUILD haddock-0.8.ebuild 1787 RMD160 0624675b7009915577bedda41a423b17a6ff4618 SHA1 980babc68964177ac52f1dc7a56c2f3a63bd8597 SHA256 0a5be309037fc86a32551512650dfbe6cc5d94fc892a3cb5fa79de1cad2cce2e
 EBUILD haddock-0.9.ebuild 1261 RMD160 6ffb8af8b4c1917aadb9b80e458dafd4a7814bd4 SHA1 7f77266ae696163b3848d5e0d8d3cac807f889b8 SHA256 3b1574f1bf17acc33eb3f1d9f5c27bcb04ea607e6a45ffd282c117c7702ec30a
-MISC ChangeLog 7322 RMD160 7d52566772d76014004844c7ba65a4cae62b1dee SHA1 b9e44d793ff2fd9bc131c2120f5c820417122f6b SHA256 ae2cf063fa5298bacb47b24f23e939eb2985826a786c6655686eeb4545adcd90
+EBUILD haddock-2.4.2.ebuild 1397 RMD160 419b5293890741355de764b4f35f384d9a531d15 SHA1 eee7816d11280b36278fbd1d5db293e777b2eb65 SHA256 5b8f2a866108456d975c208bf4e6f5dad1f6c1f192864a21066f9ab0d22b15b5
+MISC ChangeLog 7519 RMD160 6b23fb50465ab820ea4b94d303c10c2d6fb77a1d SHA1 70992aabcc6c8cff14b895472db48a61f4a83067 SHA256 087b637dda25ab4a442032bfdef45d8140cfd6c7c9b3f4fd75975b1b78bdc842
 MISC metadata.xml 223 RMD160 7783e6057effb8b8f0b79cffe8b557b32c633839 SHA1 7b962c77f2e38479a9d1621ec8d307ca9f761753 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508
