@@ -1,6 +1,12 @@
 # ChangeLog for dev-haskell/haddock
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haddock/ChangeLog,v 1.56 2008/10/04 10:12:48 armin76 Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haddock/ChangeLog,v 1.57 2009/04/19 15:20:37 kolmodin Exp $
+
+*haddock-2.4.2 (19 Apr 2009)
+
+  19 Apr 2009; Lennart Kolmodin <kolmodin@gentoo.org> +haddock-2.4.2.ebuild:
+  Version bump. Depends on dev-lang/ghc-6.10.2, so it's currently masked for
+  testing.
 
   04 Oct 2008; Raúl Porcel <armin76@gentoo.org> haddock-0.8.ebuild:
   alpha/ia64 stable
